--- a/ecommerce/templates/warehouse/warehouse-navbar.html
+++ b/ecommerce/templates/warehouse/warehouse-navbar.html
@@ -42,7 +42,7 @@
          </div>
 
          <div class="flex">
-            <a href="/logout" class="item_wrapper_2">
+            <a href="/staff/logout" class="item_wrapper_2">
                <p class="text">Đăng xuất</p>
             </a>
          </div>
