--- a/ecommerce/templates/business/business-navbar.html
+++ b/ecommerce/templates/business/business-navbar.html
@@ -21,7 +21,7 @@
 
          <div class="container">
             <a href="/business-homepage" class="item_wrapper">
-               <p class="text">Kho</p>
+               <p class="text">Hàng hóa</p>
             </a>
             <a href="/product/add" class="item_wrapper">
                <p class="text">Thêm hàng</p>
