--- a/ecommerce/templates/customer/customer-navbar.html
+++ b/ecommerce/templates/customer/customer-navbar.html
@@ -18,6 +18,7 @@
             <a href="/homepage" class="navbar_title">BOEC</a>
 
             <form action="/customer/search" method="post">
+               {% csrf_token %}
                <div class="navbar_input_wrapper">
                   <input
                      onkeypress="onKeyPress()"
