--- a/ecommerce/templates/warehouse/warehouse-navbar.html
+++ b/ecommerce/templates/warehouse/warehouse-navbar.html
@@ -36,9 +36,11 @@
             <a href="/supplier" class="item_wrapper">
                <p class="text">Nhà cung cấp</p>
             </a>
+            {% comment %}
             <a href="/statistical" class="item_wrapper">
                <p class="text">Thống kê</p>
             </a>
+            {% endcomment %}
          </div>
 
          <div class="flex">
